# G4VMP

./: CMakeLists.txt  README.md  geant4make-no-ups.sh
G4VMP/: CMakeLists.txt
G4VMP/AnalysisBase/: AnalyzerWithExpDataBase.cc  AnalyzerWithExpDataBase.hh  CMakeLists.txt  G4VmpAnalyzerBase.cc  G4VmpAnalyzerBase.hh
G4VMP/AnalysisModules/: AnalyzerHARP_module.cc  AnalyzerIAEA_module.cc  AnalyzerITEP_module.cc  AnalyzerNA49_module.cc  AnalyzerNA61_module.cc  AnalyzerSASM6E_module.cc  CMakeLists.txt
G4VMP/ApplicationModules/: CMakeLists.txt  ProcLevelVmpProducer_module.cc
G4VMP/DataProducts/: CMakeLists.txt
G4VMP/DataProducts/Analysis/: CMakeLists.txt  G4VmpBeamThinTargetConfig.cc  G4VmpBeamThinTargetConfig.hh  G4VmpRecordChi2.cc  G4VmpRecordChi2.hh  classes.h  classes_def.xml
G4VMP/DataProducts/EventGenerators/: CMakeLists.txt  GenParticle.cc  GenParticle.hh  GenParticleCollection.hh  PDGCode.hh  classes.h  classes_def.xml
G4VMP/DataProducts/Interactions/: CMakeLists.txt  G4VmpParticle.cc  G4VmpParticle.hh  G4VmpVtx.hh  classes.h  classes_def.xml
G4VMP/DataProducts/ModelConfig/: CMakeLists.txt  G4VmpModelConfig.cc  G4VmpModelConfig.hh  classes.h  classes_def.xml
G4VMP/EventGenerators/: CMakeLists.txt  EventGenerator_module.cc
G4VMP/ExpDataAccess/: ASCIIRecord.cc  ASCIIRecord.hh  CMakeLists.txt  DoSSiERConnect.cc  DoSSiERConnect.hh  JSON2Data.cc
G4VMP/G4Services/: CMakeLists.txt  PhysModelConfig_service.cc  PhysModelConfig_service.hh  ProcLevelSimSetup_service.cc  ProcLevelSimSetup_service.hh
G4VMP/G4WrapperComponents/: CMakeLists.txt  FTFPWrapper.cc  FTFPWrapper.hh  ModelConfigMapper.cc  ProcessWrapper.cc  ProcessWrapper.hh
G4VMP/PlottingAppsForCHEP2023/: FindDefaultDir_Fragment.C  MergeAnalysisFiles.C  OpenFiles_Fragment.C  PlotGraph.C  PlotHARP4CHEP.C  PlotHisto.C  PlotSensitivity.C  PlotSensitivityIAEA.C  PlotSensitivityITEP.C  PlotSensitivityNA49.C  PlotSensitivityNA61.C  TheHistos_Fragment.C
G4VMP/ProdScripts/HelperScripts/: art_producers.sh  generate_universes.C  multiU_NUniv5_FTFP.fcl
G4VMP/ProdScripts/SLURM-shell/: ana_HARP_multiU.sh  ana_HARP_singleU.sh  ana_IAEA_multiU_wcic.sh  ana_IAEA_singleU.sh  ana_ITEP_singleU.sh  ana_NA49_singleU.sh  ana_NA61_multiU.sh  ana_NA61_multiU_lq.sh  ana_NA61_singleU.sh  sim_multiU_lq_update.sh  sim_multiU_wcic.sh  slurm_multiU_master.sh  submit_ana_multiU_wcic.sh  submit_ana_test.sh  submit_sim_ProcL_wcic.sh  submit_sim_test.sh
G4VMP/ProdScripts/exp_data_includes/: exp_data.sh
G4VMP/StandaloneApps/: Chi2.C  FindGoodUniv.C  GeneralSelection_Fragment.C  MergeAnalysisFiles.C  OpenFiles_Fragment.C  PlotSensitivity.C  PlotSensitivityIAEA.C  PlotSensitivityITEP.C  PlotSensitivityNA61.C  TheHistos_Fragment.C  general.h
G4VMP/StatAnalysisTools/: CMakeLists.txt  Chi2Calc.cc  Chi2Calc.hh
G4VMP/TuningToolsInterface/Converters/: Convert2Professor.cc  ConvertDirty4YODA.cc  Makefile  convert-root2yoda.sh
G4VMP/fcl/: ftf-Tune2022-v0.fcl  ftf-params-process-level-include.fcl  piplus5GeV-C-ProcLev-ftfp-HARPanalysis.fcl  piplus5GeV-Pb-ProcLev-ftfp-HARPanalysis.fcl  piplus60GeV-C-ProcLev-ftfp-NA61analysis.fcl  proton158GeV-C-ProcLev-ftfp-NA49analysis.fcl  proton3.824GeV-C-ProcLev-ftfp-IAEA.fcl  proton3.824GeV-Pb-ProcLev-ftfp-IAEA.fcl  proton31GeV-C-ProcLev-ftfp-NA61analysis.fcl  proton5GeV-C-ProcLev-ftfp-HARPanalysis.fcl  proton5GeV-Pb-ProcLev-ftfp-HARPanalysis.fcl  proton5GeV-Pb-ProcLev-ftfp-ITEPanalysis.fcl  proton5GeV-Pb-ProcLev-ftfp.fcl  proton7.5GeV-C-ProcLev-ftfp-ITEPanalysis.fcl  proton7.5GeV-Pb-ProcLev-ftfp-ITEPanalysis.fcl
ups/: product-config.cmake.in  product_deps
