# Build these directories

add_subdirectory( DataProducts )
add_subdirectory( ExpDataAccess )
add_subdirectory( EventGenerators )
add_subdirectory( G4WrapperComponents )
add_subdirectory( G4Services )
add_subdirectory( ApplicationModules )
add_subdirectory( StatAnalysisTools )
add_subdirectory( AnalysisBase )
add_subdirectory( AnalysisModules )


